--- a/sites/profiles/templates/eplsystemd.erb
+++ b/sites/profiles/templates/eplsystemd.erb
@@ -5,11 +5,11 @@ After=network.target
 
 [Service]
 PIDFile=/run/epl_gunicorn.pid
-User=<%= @user %>
-Group=<%= @group %>
+User=<%= @epl_user %>
+Group=<%= @epl_user %>
 RuntimeDirectory=gunicorn
 WorkingDirectory=<%= @epl_project_path %>/app
-ExecStart=/usr/bin/gunicorn --pid /run/epl_gunicorn.pid --bind <%= @epl_address %>:<%= @epl_port %> /etc/gunicorn.d/epl
+ExecStart=/usr/bin/gunicorn3 --pid /run/epl_gunicorn.pid --bind <%= @epl_address %>:<%= @epl_port %> /etc/gunicorn.d/epl
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 PrivateTmp=true
